<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtvCalculadora"
        android:layout_width="366dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <android.support.v7.widget.GridLayout
        android:layout_width="353dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:onClick="onClick_C"
            android:text="@string/btn_C"
            tools:text="@string/btn_C" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onClick_del"
            android:text="@string/btn_Del" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:onClick="onClick_porcentaje"
            android:text="%"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:onClick="onClick_entre"
            android:text="/" />

        <Button
            android:id="@+id/btn7"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick7"
            android:text="@string/btn_7"
            app:layout_column="0"
            app:layout_row="1"
            tools:text="@string/btn_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick8"
            android:text="@string/btn_8"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick9"
            android:text="@string/btn_9"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_por"
            android:text="X"
            app:layout_column="3"
            app:layout_row="1"
            tools:text="X" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick4"
            android:text="@string/btn_4"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick5"
            android:text="@string/btn_5"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick6"
            android:text="@string/btn_6"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_menos"
            android:text="-"
            app:layout_column="3"
            app:layout_row="2"
            tools:text="-" />

        <Button
            android:id="@+id/button13"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick1"
            android:text="@string/btn_1"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button14"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick2"
            android:text="@string/btn_2"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick3"
            android:text="@string/btn_3"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button18"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick0"
            android:text="@string/btn_0"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button19"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_punto"
            android:text="."
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button20"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_igual"
            android:text="="
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/button21"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_mas"
            android:text="+"
            app:layout_column="3"
            app:layout_row="3"
            tools:text="+" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="86dp"
            android:layout_height="50dp"
            android:onClick="onClick_raiz"
            app:layout_column="0"
            app:layout_row="4"
            app:srcCompat="@mipmap/ic_raiz" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/txtbCalculos"
        android:layout_width="368dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtvCalculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>